eliminate incubation library